# bf-rust

./: Cargo.toml
src/: brainfuck.rs  lib.rs  main.rs  wasm.rs
