[package]
name = "bf-rust"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.126"
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
